# OCR-Reader

./: .gitignore  111requirements.txt  app.py  macOS-x86_64.spec  pyproject.toml  windows-x86_64.spec
.github/workflows/: build-multi-platform.yml  build-windows.yml
assets/: style.qss
assets/help/: content.html
docs/: gemini.txt  package.txt  params.txt  projects.txt  refactor1.txt  review提示词.txt  signal.txt
src/: app.py  app_config.py  main_ui.py
src/core/: app_context.py  app_logging.py  image_data_store.py  image_identifier.py  image_pipeline.py  ini_manager.py  ocr_service.py  opencv_operations.py  param_utils.py  parameters.py  project_manager.py  task_definitions.py  task_manager.py  translation_service.py  worker.py
src/view/: ImageComparisonWindow.py  control_panel.py  custom_slider.py  help_window.py  image_interaction_handler.py  image_viewer.py  interaction_states.py  slider_spinbox.py  smart_spinbox.py  zoomable_label.py
src/view/pages/: binarization_page.py  geometric_correction_page.py  noise_removal_page.py  ocr_export_page.py
