[project]
name = "ocr-reader"
version = "0.0.1"
description = "一个用于图片处理、OCR识别和翻译的工具"
readme = "README.md"
requires-python = ">=3.9, <3.10"
dependencies = [
    "opencv-python==4.9.0.80",
    "numpy<2.0", #numpy1.x
    "pillow==11.3.0",
    "pyqt5==5.15.2", # 验证可用
    "pytesseract==0.3.13",
    "sentencepiece==0.2.1",
    "torch==2.2.2", # last-mac intel cpu mast 2.2.2
    "transformers==4.39.3", #配合touch的版本
]

# 在这里定义可选依赖项，包括开发依赖
[project.optional-dependencies]
dev = ["pyinstaller"]

[tool.uv]
constraint-dependencies = ["pyqt5-qt5 <=5.15.2"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true